data displayed by directory

--- a/client/index.jade
+++ b/client/index.jade
@@ -11,7 +11,7 @@ html(lang='en', data-ng-app='eshoprShop')
         link(href="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js", rel="stylesheet")
         //- link(href="/views/partials/page/ngview-animate.css", rel="stylesheet")
         //- link(href="/views/partials/partials.css", rel="stylesheet")
-        //- link(href="/js/graphs/graphs.css", rel="stylesheet")
+        link(href="/js/graphs/graphs.css", rel="stylesheet")
         link(href="/recipes/recipes.css", rel="stylesheet")
         link(href="/components/theme.css", rel="stylesheet")
 
