--- a/client/views/partials/graphs/plot1.jade
+++ b/client/views/partials/graphs/plot1.jade
@@ -5,6 +5,8 @@ h1 plot1.jade
 input(type="text" ng-model="color" placeholder="Enter a color")
 chart#plot-one 
 
+chart
+
 #plotarea
     table.table.table-striped
         //caption GDP, based on exchange rates, over time. Values in billion USDs.
