--- a/client/js/graphs/graphs.css
+++ b/client/js/graphs/graphs.css
@@ -1,10 +1,10 @@
 body {
-	background:green !important;
+	/*background:green !important;*/
 
 
 }
 
 #plot-one, .plotarea {
-	background:pink;
-	height:500px; width:700px;
+	/*background:pink;*/
+	height:200px; width:300px;
 }
