--- a/client/js/graphs/graphs.css
+++ b/client/js/graphs/graphs.css
@@ -8,3 +8,12 @@ body {
 	/*background:pink;*/
 	height:200px; width:300px;
 }
+
+.plots ul {
+	list-style: none;
+	width: 100%;
+}
+.graph-key {
+	display: inline;
+	float: left;
+}
