--- a/client/views/partials/graphs/plot1.jade
+++ b/client/views/partials/graphs/plot1.jade
@@ -1,18 +1,17 @@
-h1 Make it better
-ul(ng-repeat="question in questions")
-	li {{question.label}} [{{question.name}}]
-		ul(ng-repeat="answer in question.questions")
-			li {{answer.value}} [{{answer.id}}]
-				ul(ng-repeat="response in responses") 
-					li 
-						ul(ng-repeat="choice in response.questions") 
+.plots
+	ul(ng-repeat="question in questions")
+		li.inline-list {{question.label}} [{{question.name}}]
+			ul(ng-repeat="answer in question.questions")
+				li.graph-key {{answer.value}} [{{answer.id}}]
+					span(ng-repeat="response in responses") 
+						div(ng-repeat="choice in response.questions") 
 							div(ng-if="choice.id === question.name") 
 								div(ng-if="choice.value === answer.id")
-									it works
-				
-						
+									i.fa.fa-gear
+					
+							
 
 
-chart(tstvalue="red")
+//chart(tstvalue="red")
 
 
