some messy nested views

--- a/client/index.jade
+++ b/client/index.jade
@@ -128,5 +128,7 @@ html(lang='en', data-ng-app='eshoprShop')
             include views/partials/graphs/plot1
         // Blog Plugin
         script(type="text/ng-template", id="blog/public/blog")
-            include views/partials/blog/blog
+            include views/partials/blog/public/blog
+        script(type="text/ng-template", id="blog/public/sidebar")
+            include views/partials/blog/public/sidebar
 
