--- a/client/views/partials/blog/public/blog.jade
+++ b/client/views/partials/blog/public/blog.jade
@@ -1,1 +1,14 @@
-h1.post-title this is {{debug}}
+.row
+	.col-md-8
+		h1.post-title this is {{debug}}
+		div(ui-view="main")
+			h1.post-title this has a different controller {{debug}}
+
+	
+	.col-md-4
+		div(ui-view="sidebar")
+
+
+
+
+
