--- a/client/views/partials/blog/public/blogpost.jade
+++ b/client/views/partials/blog/public/blogpost.jade
@@ -1,45 +1,1 @@
-.blog-post
-	h1.blog-post-title Create new files
-
-	link(href="/blog/blog.css", rel="stylesheet")
-	
-	script(src='/js/blog/admin/adminBlogController.js')
-    script(src='/js/blog/public/publicBlogController.js')
-
-	script(type="text/ng-template", id="blogpublic/blog")
-        include views/partials/blog/public/blog
-    script(type="text/ng-template", id="blogpublic/blog")
-        include views/partials/blog/public/blog
-
-    add the files to index.jade
-
-    pass the public controller as a dependancy of the main app
-
-    var eshoprShop = angular.module('eshoprShop', [
-    'publicBlogController',
-    ]);
-
-    create a new state provider instance within the app routing config
-
-    // Blog Routes
-    $stateProvider
-        .state('anon.blog')
-            url: '/blog',
-            templateUrl: 'blog/public/blog',
-            controller: 'publicBlogController'
-        });
-
-    If you're typing this out by hand, you will probably encounter a 'Resource interpreted as Stylesheet but transferred with MIME type text/html' error. This usually means you have
-    gotten the file path incorrect for the location of your files, or else you have created
-    the files to be included with the wrong permissions and the web server does not have 
-    access to them.
-
-    It's worth noting that the format of script(type="text/ng-template", id="blog/blog") when preloading the jade templates in the index.html file, that the id here, should be an indentical string to the one used to call the template from the state provider in app.js.
-    It essentially acts as a key linking the template engine output to the stateprovider argument. The practical outcome of this is that you can change the template path in the index file without having to modify the controller.
-
-
-    
-
-
-
-
+h2 blog post view
