no way, it actually worked

--- a/client/index.jade
+++ b/client/index.jade
@@ -131,4 +131,6 @@ html(lang='en', data-ng-app='eshoprShop')
             include views/partials/blog/public/blog
         script(type="text/ng-template", id="blog/public/sidebar")
             include views/partials/blog/public/sidebar
+        script(type="text/ng-template", id="blog/public/list")
+            include views/partials/blog/public/list
 
