--- a/client/views/partials/header/header.jade
+++ b/client/views/partials/header/header.jade
@@ -9,7 +9,7 @@
                 li(data-access-level='accessLevels.anon', active-nav)
                     a(href='/') Home
                 li(data-access-level='accessLevels.anon', active-nav)
-                    a(href='/blog') Blog
+                    a(href='/blog/posts') Blog
                 li(data-access-level='accessLevels.anon', active-nav)
                     a(href='/recipes') Graphs
                 li(data-access-level='accessLevels.anon', active-nav='nestedTop')
