--- a/client/index.jade
+++ b/client/index.jade
@@ -133,4 +133,6 @@ html(lang='en', data-ng-app='eshoprShop')
             include views/partials/blog/public/sidebar
         script(type="text/ng-template", id="blog/public/list")
             include views/partials/blog/public/list
+        script(type="text/ng-template", id="blog/admin/write")
+            include views/partials/blog/admin/write
 
