--- a/client/views/partials/blog/admin/write.jade
+++ b/client/views/partials/blog/admin/write.jade
@@ -1,1 +1,20 @@
-h1 posts n stuff
+h2 
+    span
+        i.fa.fa-pen &nbsp;
+    Create Blog Post {{Usernames}} 
+
+.hero
+    form(name="blogPostForm" 
+        ng-controller="adminBlogController"
+        ng-submit="createPost()"
+        )
+            input.form-control(name="input" 
+                placeholder="Post Title"
+                ng-model="formData.title" required)
+            text-angular(ng-model="formData.body")
+            input.form-control.btn(type="submit" id="submitnew" value="Create")
+
+
+
+
+
