--- a/client/views/partials/blog/public/list.jade
+++ b/client/views/partials/blog/public/list.jade
@@ -1,4 +1,5 @@
+
 article.post(ng-repeat="post in posts")
 	h1 
 		a(href="{{post.slug}}") {{post.title}}
-	p {{post.body}}
+	.post-body(ng-bind-html="post.body")
