--- a/client/js/graphs/graphs.css
+++ b/client/js/graphs/graphs.css
@@ -1,5 +1,5 @@
 body {
-	/*background:green !important;*/
+	background:url('bg.png');
 
 
 }
@@ -16,4 +16,71 @@ body {
 .graph-key {
 	display: inline;
 	float: left;
+}
+
+.navbar.custom {
+	padding:12px 0px;
+	border-radius:0;
+    /*background: #75A375;*/
+	background: #fff;
+	margin-bottom:0;
+}
+
+.factory h1, .factory h1 a{
+    font-size: 36px;
+    color:#557088;
+} 
+.factory ul {
+    list-style: none;
+}
+.factory a {
+	color:#557088;
+    font-size: 18px;
+}
+
+.main-view-container {
+	/*background:red;*/
+	min-height:400px;
+	padding:25px 0;
+}
+
+.footer {
+	padding:25px 0 ;
+	background: #fff;
+}
+.footer h3 {
+    font-size: 35px;
+padding: 23px;
+color: #C7B9A0;
+text-shadow: 1px 1px 1px #999;
+}
+
+/*home*/
+.wrapped-fa {
+    float: left;
+font-size: 48px;
+padding: 0 12px 0px 0;
+/*color:#557088;*/
+}
+.md-3-title {
+    font-size: 20px;
+    font-weight: bold;
+    /*color:#557088;*/
+}
+.section-title {
+font-size: 45px;
+padding: 23px;
+color: black;
+text-shadow: 1px 1px 2px#A18FD8;
+}
+
+article.post {
+    background: white;
+padding: 10px 15px;
+border: 1px solid #c3c3c3;
+margin: 0 0 25px;
+}
+
+article.post {
+    font-size: 18px;
 }
