--- a/client/views/partials/header/header.jade
+++ b/client/views/partials/header/header.jade
@@ -7,7 +7,7 @@
                 li(data-access-level='accessLevels.anon', active-nav)
                     a(href='/blog/posts') Blog
                 li(data-access-level='accessLevels.anon', active-nav)
-                    a(href='/contact') Contact
+                    a(href='/shop/products') Shop
                 li(data-access-level='accessLevels.anon', active-nav)
                     a(href='/about') About
                 //li(data-access-level='accessLevels.anon', active-nav)
