--- a/client/js/graphs/graphs.css
+++ b/client/js/graphs/graphs.css
@@ -84,3 +84,13 @@ margin: 0 0 25px;
 article.post {
     font-size: 18px;
 }
+
+
+input.form {
+padding: 5px;
+border-radius: 4px;
+border: 2px solid #746C6C;
+width: 100%;
+box-shadow: 0px 0px 1px 1px #C48888;
+margin-bottom:25px;
+}
