--- a/client/views/partials/shop/productlist.jade
+++ b/client/views/partials/shop/productlist.jade
@@ -5,7 +5,7 @@ article.post.simpleCart_shelfItem(ng-repeat="product in products")
 
     input(type="text" value="1" class="item_Quantity")
 
-    h4.price.item_price &euro; {{product.price}}
+    h4.price.item_price {{product.price}} &euro;
 
     a.item_add(href="javascript:;") Add to Cart
 
