contact model added

--- a/client/index.jade
+++ b/client/index.jade
@@ -84,6 +84,7 @@ html(lang='en', data-ng-app='eshoprShop')
         // Shop Plugin
         script(src='/js/shop/product/productController.js')
         script(src='/js/shop/checkout/checkoutController.js')
+        script(src='/js/shop/contactController.js')
         script(src='/js/shop/libs/simpleCart.js')
 
         // Header
@@ -155,4 +156,6 @@ html(lang='en', data-ng-app='eshoprShop')
             include views/partials/shop/productlist
         script(type="text/ng-template", id="shop/product")
             include views/partials/shop/product
+        script(type="text/ng-template", id="shop/contact")
+            include views/partials/shop/contact
 
