--- a/client/views/partials/header/header.jade
+++ b/client/views/partials/header/header.jade
@@ -8,8 +8,10 @@
                     a(href='/blog/posts') Blog
                 li(data-access-level='accessLevels.anon', active-nav)
                     a(href='/shop/products') Shop
+                //li(data-access-level='accessLevels.anon', active-nav)
+                    //a(href='/about') About
                 li(data-access-level='accessLevels.anon', active-nav)
-                    a(href='/about') About
+                    a(href='/contact') Contact
                 //li(data-access-level='accessLevels.anon', active-nav)
                     //a(href='/recipes') Graphs
                 li(data-access-level='accessLevels.anon', active-nav='nestedTop')
