--- a/client/index.jade
+++ b/client/index.jade
@@ -85,6 +85,7 @@ html(lang='en', data-ng-app='eshoprShop')
         script(src='/js/shop/product/productController.js')
         script(src='/js/shop/checkout/checkoutController.js')
         script(src='/js/shop/contactController.js')
+        script(src='/js/shop/ordersController.js')
         script(src='/js/shop/libs/simpleCart.js')
 
         // Header
@@ -158,4 +159,7 @@ html(lang='en', data-ng-app='eshoprShop')
             include views/partials/shop/product
         script(type="text/ng-template", id="shop/contact")
             include views/partials/shop/contact
+        script(type="text/ng-template", id="shop/admin/orders")
+            include views/partials/shop/admin/orders
+
 
