--- a/client/views/partials/shop/contact.jade
+++ b/client/views/partials/shop/contact.jade
@@ -1,1 +1,20 @@
-{{debug}}
+
+.row
+    .col-md-8
+        div
+        //(ui-view="main")
+        .row
+            .col-md-6.col-md-offset-3
+                form
+                    input.form(type="text" placeholder="Name")
+                    input.form(type="text" placeholder="Email")
+                    .posrel
+                        input.textarea.form(type="textarea" placeholder="Message")
+                        button.form.special(ng-click="submitForm()") Send
+
+    .col-md-4
+        Not Corp Plc
+        123 Forty Five Street
+        Sometown
+        Someplace
+
