rework of user model

--- a/client/index.jade
+++ b/client/index.jade
@@ -56,6 +56,7 @@ html(lang='en', data-ng-app='eshoprShop')
         script(src='/components/gsap/src/uncompressed/TimelineMax.js')
         script(src='/components/gsap/src/uncompressed/TweenMax.js')
         script(src='/js/graphs/jquery.flot.js')
+        script(src='/components/angular-file-upload/angular-file-upload.js')
         script(src='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.5.4/bootstrap-select.min.js')
         script(src='/js/routingConfig.js')
         script(src='/js/app.js')
