--- a/client/views/partials/blog/admin/write.jade
+++ b/client/views/partials/blog/admin/write.jade
@@ -12,6 +12,7 @@ h2
                 placeholder="Post Title"
                 ng-model="formData.title" required)
             text-angular(ng-model="formData.body")
+            input(type="file" nv-file-select uploader="{FileUploader}" options="{Object}")
             input.form-control.btn(type="submit" id="submitnew" value="Create")
 
 
