--- a/client/views/partials/header/header.jade
+++ b/client/views/partials/header/header.jade
@@ -2,21 +2,26 @@
     .navbar-inner
         .container-fluid
             ul.nav.nav-tabs
-                li(data-access-level='accessLevels.anon', active-nav)
+                li(active-nav)
                     a(href='/') Home
-                li(data-access-level='accessLevels.anon', active-nav)
+                li(active-nav)
                     a(href='/blog/posts') Blog
-                li(data-access-level='accessLevels.anon', active-nav)
-                    a(href='/shop/products') Shop
+                //li(active-nav)
+                    //a(href='/shop/products') Shop
                 //li(data-access-level='accessLevels.anon', active-nav)
                     //a(href='/about') About
-                li(data-access-level='accessLevels.anon', active-nav)
+                li(active-nav)
                     a(href='/contact') Contact
                 //li(data-access-level='accessLevels.anon', active-nav)
                     //a(href='/recipes') Graphs
-                li(data-access-level='accessLevels.anon', active-nav='nestedTop')
-                    a(href='/private') Private
+                li(data-access-level='accessLevels.user', active-nav='nestedTop')
+                    a(href='/private') Admin
                 li(data-access-level='accessLevels.admin', active-nav)
                     a(href='/admin') Admin
                 li(data-access-level='accessLevels.admin', active-nav)
                     a(href='/admin') Admin
+
+        .login.right(data-access-level='accessLevels.user' ng-controller="LoginCtrl")
+            span.label(data-ng-class='{"label-info": user.role.title == userRoles.user.title, "label-success": user.role.title == userRoles.admin.title}') {{ user.role.title }}
+                a(href="", data-ng-click="logout()")
+                    | Log out
