--- a/client/views/partials/header/header.jade
+++ b/client/views/partials/header/header.jade
@@ -6,8 +6,8 @@
                     a(href='/') Home
                 li(active-nav)
                     a(href='/blog/posts') Blog
-                //li(active-nav)
-                    //a(href='/shop/products') Shop
+                li(active-nav)
+                    a(href='/shop/products') Book Shop
                 //li(data-access-level='accessLevels.anon', active-nav)
                     //a(href='/about') About
                 li(active-nav)
