--- a/client/views/partials/shop/shop.jade
+++ b/client/views/partials/shop/shop.jade
@@ -1,10 +1,10 @@
 .row
     .col-md-8
-        div(ui-view="main")
+        div(ui-view="main" autoscroll="false")
 
     
     .col-md-4
-        div(ui-view="sidebar")
+        div(ui-view="sidebar" autoscroll="false")
 
 
 
