--- a/client/index.jade
+++ b/client/index.jade
@@ -88,6 +88,7 @@ html(lang='en', data-ng-app='eshoprShop')
         script(src='/js/shop/contactController.js')
         script(src='/js/shop/order/orderController.js')
         script(src='/js/shop/libs/simpleCart.js')
+        script(src='/components/angular-cookies/angular-cookies.js')
 
         // Header
         script(src='/js/header/headerDirective.js')
@@ -162,5 +163,9 @@ html(lang='en', data-ng-app='eshoprShop')
             include views/partials/shop/contact
         script(type="text/ng-template", id="shop/admin/orders")
             include views/partials/shop/admin/orders
+        script(type="text/ng-template", id="shop/thanks")
+            include views/partials/shop/thanks
+        script(type="text/ng-template", id="shop/downloads")
+            include views/partials/shop/downloads
 
 
