pass downloads array from checkout to success page

--- a/client/index.jade
+++ b/client/index.jade
@@ -89,6 +89,7 @@ html(lang='en', data-ng-app='eshoprShop')
         script(src='/js/shop/order/orderController.js')
         script(src='/js/shop/libs/simpleCart.js')
         script(src='/components/angular-cookies/angular-cookies.js')
+        script(src='/components/angular-local-storage/angular-local-storage.js')
 
         // Header
         script(src='/js/header/headerDirective.js')
